<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/black">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_height="50dp"
        android:layout_width="50dp"
        android:layout_margin="20dp"
        android:id="@+id/logoutdia"
        android:src="@drawable/logo"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:text="@string/sala"
        android:textSize="20sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/id_jitsi_room"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="30dp"
        android:background="@color/white"
        android:focusable="true"
        android:textColor="@color/black"
        android:textSize="20sp"

        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      android:layout_marginBottom="30dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/id_jitsi_cancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="10sp"
            android:textColor="@color/black"
            android:text="@string/cancelar"
            android:backgroundTint="@color/white"/>
<Space
    android:layout_width="10dp"
    android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/id_jitsi_aceptar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="10sp"
            android:text="@string/aceptar"
            android:backgroundTint="@color/white"/>

    </LinearLayout>


</LinearLayout>