<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    android:background="@color/black">
    <!-- cross_layout.xml -->


    <ImageView
        android:id="@+id/id_cerrar_ventana_alert"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/cross"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:layout_gravity="end|center_vertical"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_height="50dp"
        android:layout_width="50dp"
        android:layout_margin="20dp"
        android:id="@+id/logoutdia"
        android:src="@drawable/logo"
        android:layout_gravity="center"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_has_olvidado_pass"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/colorLink"
        android:layout_marginBottom="5dp"/>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introduce_correo"
        android:gravity="center"

        android:textSize="15sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <EditText
        android:background="@color/white"
        android:layout_margin="15dp"

        android:textSize="15sp"
        android:id="@+id/id_email_input_reset"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:backgroundTintMode="screen"
    />

    <Button
        android:id="@+id/id_reset_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enviar"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
    />
    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/id_result_restablecerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/colorLink"/>

</LinearLayout>
