<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">




    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/rg"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilerg0"
        android:layout_width="149dp"
        android:layout_height="114dp"
        android:layout_below="@+id/tv_register_title"
        android:layout_marginStart="140dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/photocamera" />

    <TextView
        android:id="@+id/nombre_label_registar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profilerg0"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/nombre"
        android:textColor="@color/black"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/idNombreAplellidosET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/nombre_label_registar"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:backgroundTintMode="screen"
        android:padding="10dp"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/email_label_registar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idNombreAplellidosET"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/correo"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/idEmailRegistarET"
        android:layout_below="@id/email_label_registar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        android:backgroundTintMode="screen"
        />

    <TextView
        android:id="@+id/password_label_registar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idEmailRegistarET"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/contrasenia"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/idPasswordRegisterET"
        android:layout_below="@id/password_label_registar"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:backgroundTintMode="screen"
        />

    <Button
        android:id="@+id/id_btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rg"
        android:layout_below="@id/idPasswordRegisterET"
        android:layout_centerHorizontal="true"
        android:layout_margin="32dp"
        android:textColor="@android:color/white"
        android:background="@android:color/black"/>


    <TextView
        android:layout_margin="10dp"
        android:id="@+id/id_result_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@+id/id_btn_register"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/colorLink"/>

</RelativeLayout>