<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_logo"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/correo"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/idEmailET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/email_label"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        android:backgroundTintMode="screen"
    />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idEmailET"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/contrasenia"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/idPasswordET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/password_label"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:backgroundTintMode="screen"/>

    <Button
        android:id="@+id/idBtnLogin"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/idPasswordET"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/negro"
        android:text="Login"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/id_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idBtnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/recuperarContrasenia"
        android:textColor="@color/colorLink"
        android:textStyle="bold|italic"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/id_register_account_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_forgot_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="¿No tienes cuenta? Registrar"
        android:textColor="@color/colorLink"
        android:textSize="16sp"
        android:textStyle="bold|italic" />


</RelativeLayout>

